--- a/resources/translations/en_US.json
+++ b/resources/translations/en_US.json
@@ -766,6 +766,31 @@
         "keep_merged_bones": "Keep Merged Bones",
         "merge_visible_meshes_only": "Merge Visible Meshes Only",
         "RemoveRigidbodiesJointsOperator.label": "Remove Rigidbodies and Joints",
-        "RemoveRigidbodiesJointsOperator.description": "Rigidbodies and joints are used by MMD software to simulate physics. \nThey are completely useless for VRChat, so removing them is recommended for VRChat users!"
+        "RemoveRigidbodiesJointsOperator.description": "Rigidbodies and joints are used by MMD software to simulate physics. \nThey are completely useless for VRChat, so removing them is recommended for VRChat users!",
+        "FixFBTButton.label": "Add Full Body Tracking Fix",
+        "FixFBTButton.desc": "Adds the Full Body Tracking fix to your model by creating additional leg bones",
+        "RemoveFBTButton.label": "Remove Full Body Tracking Fix", 
+        "RemoveFBTButton.desc": "Removes the additional leg bones added by the Full Body Tracking fix",
+        "LoadBonesButton.label": "Load Root Bones",
+        "LoadBonesButton.desc": "Loads a list of bones that can be parented together",
+        "Importer.export_resonite.label": "Export for Resonite",
+        "Importer.export_resonite.desc": "Export this model for use in Resonite",
+        "VisemePreviewOperator.label": "Preview Visemes",
+        "VisemePreviewOperator.desc": "Preview how viseme shapes will look in-game",
+        "FixArmature.description": "Automatically fixes the model's armature by:\n- Reparenting bones\n- Removing unnecessary bones\n- Translating bone names\n- Merging weights\n- Fixing the hips\n- Converting morphs to shape keys",
+        "Scene.eye_tracking_mode.label": "Eye Tracking Mode",
+        "Scene.eye_tracking_mode.desc": "Select which eye tracking system to use",
+        "Scene.eye_tracking_mode.sdk3.label": "VRChat SDK3",
+        "Scene.eye_tracking_mode.sdk3.desc": "Eye tracking setup for VRChat SDK3",
+        "Scene.eye_tracking_mode.legacy.label": "Legacy",
+        "Scene.eye_tracking_mode.legacy.desc": "Legacy eye tracking system for other platforms",
+        "Scene.viseme_preview_mode.label": "Preview Mode",
+        "Scene.viseme_preview_mode.desc": "Enable viseme shape preview mode",
+        "Scene.viseme_preview_selection.label": "Preview Shape",
+        "Scene.viseme_preview_selection.desc": "Select which viseme shape to preview",
+        "Scene.viseme_validate_deformation.label": "Validate Deformations",
+        "Scene.viseme_validate_deformation.desc": "Check if shape key deformations are within reasonable ranges",
+        "Scene.remove_doubles_threshold.label": "Threshold",
+        "Scene.remove_doubles_threshold.desc": "Distance threshold for removing duplicate vertices"
     }
 }
