--- a/resources/translations/ko_KR.json
+++ b/resources/translations/ko_KR.json
@@ -794,6 +794,8 @@
         "Scene.viseme_validate_deformation.label": "변형 검증",
         "Scene.viseme_validate_deformation.desc": "쉐이프 키 변형이 적절한 범위 내인지 확인",
         "Scene.remove_doubles_threshold.label": "임계값",
-        "Scene.remove_doubles_threshold.desc": "중복 정점을 제거할 거리 임계값"
+        "Scene.remove_doubles_threshold.desc": "중복 정점을 제거할 거리 임계값",
+        "Scene.generate_twistbones_upper.label": "상체",
+        "Scene.generate_twistbones_upper.desc": "상체 트위스트 본 생성 (척추, 목)"
     }
 }
