--- a/resources/translations/ja_JP.json
+++ b/resources/translations/ja_JP.json
@@ -782,7 +782,9 @@
         "Scene.viseme_validate_deformation.label": "変形を検証",
         "Scene.viseme_validate_deformation.desc": "シェイプキーの変形が適切な範囲内かチェック",
         "Scene.remove_doubles_threshold.label": "しきい値",
-        "Scene.remove_doubles_threshold.desc": "重複頂点を削除する距離のしきい値"
+        "Scene.remove_doubles_threshold.desc": "重複頂点を削除する距離のしきい値",
+        "Scene.generate_twistbones_upper.label": "上半身",
+        "Scene.generate_twistbones_upper.desc": "上半身のツイストボーンを生成（背骨、首）"    
     }
 }
 
