--- a/resources/translations/ja_JP.json
+++ b/resources/translations/ja_JP.json
@@ -161,15 +161,6 @@
         "UpdaterPanel.name": "設定:",
         "UpdaterPanel.requireRestart1": "再起動が必要.",
         "UpdaterPanel.requireRestart2": "一部の変更では、ブレンダーの再起動が必要です.",
-        "CreditsPanel.label": "クレジット",
-        "CreditsPanel.desc1": "Cats Blender Plugin (",
-        "CreditsPanel.desc2": "HotoxとGiveMeAllYourCatsによって作成",
-        "CreditsPanel.desc3": "素晴らしいVRChatコミュニティのために <3",
-        "CreditsPanel.desc4": "特別な感謝: ShotariyaとNeitri",
-        "CreditsPanel.descContributors": "Feilen、Jordo、Ruubick、989onan、triazo、Mysteryem",
-        "CreditsPanel.descContributors2": "ShotariyaとNeitri",
-        "CreditsPanel.desc5": "非公式メンテナ - Yusarina and 989onan",
-        "CreditsPanel.desc6": "助けが必要ですか、バグを見つけましたか?",
         "FixArmature.label": "MMDモデルを修正",
         "FixArmature.desc": "警告: そうでない場合はこれを使用しないでください。\n新しい MMD モデルをインポートしています。使用しないでください\nすでにセットアップされているモデルの場合はこちら\nユニティとVRCHAT！\n\n自動的に：\n- 親の骨\n- 不要なボーン、オブジェクト、グループ、コンストレイントを削除します\n- ボーンとオブジェクトの翻訳と名前変更\n- ウェイトペイントをマージします\n- ヒップを補正します\n- モーフをシェイプに変換します",
         "FixArmature.warning.line1": "注意：この機能はUnity用に設定されていないモデル専用です。",
@@ -323,18 +314,12 @@
         "ForumButton.label": "フォーラムに移動する",
         "ForumButton.URL": "https://vrcat.club/threads/cats-blender-plugin.6/",
         "ForumButton.success": "フォーラムが開かれました。",
-        "HelpButton.label": "ヘルプが必要ですか？",
-        "HelpButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/wiki",
-        "HelpButton.success": "Github wikiが開かれました。",
         "LegacyReadButton.label": "レガシー機能のWiki",
         "LegacyReadButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/wiki/Legacy-Features",
         "LegacyReadButton.success": "Github wikiが開かれました。",
         "MMDOptionswiki.label": "MMDオプションWiki",
         "MMDOptionswiki.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/wiki/Features#mmd-options",
         "MMDOptionswiki.success": "Github wikiが開かれました。",
-        "PatchnotesButton.label": "最新のパッチノート",
-        "PatchnotesButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/releases",
-        "PatchnotesButton.success": "パッチノートが開かれました。",
         "ScanButton.label": "デシメーションモデルのスキャン",
         "ScanButton.desc": "メッシュを分離します。",
         "AddShapeButton.label": "追加",
@@ -790,7 +775,23 @@
         "Scene.generate_twistbones_upper.desc": "上半身のツイストボーンを生成（背骨、首）",
         "RemoveDoubles.warning.shapekeys": "このメッシュには影響を受ける可能性のあるシェイプキーがあります",
         "RemoveDoubles.warning.shapekeys.impact": "重複を削除すると、シェイプキーの変形に影響を与える可能性があります",
-        "RemoveDoubles.warning.shapekeys.continue": "続行しますか？" 
+        "RemoveDoubles.warning.shapekeys.continue": "続行しますか？",
+        "CreditsPanel.label": "クレジット",
+        "CreditsPanel.desc1": "Cats ブレンダープラグイン (",
+        "CreditsPanel.desc4": "特別な感謝:",
+        "CreditsPanel.descContributors": "Feilen, Jordo, Ruubick, triazo, Mysteryem",
+        "CreditsPanel.descContributors2": "Shotariya と Neitri",
+        "CreditsPanel.maintainers1": "Neoneko チームによって維持されています",
+        "CreditsPanel.maintainers2": "メンテナー: Yusarina と 989onan",
+        "CreditsPanel.originalCreators": "Hotox と GiveMeAllYourCats によって作成",
+        "HelpButton.label": "ヘルプが必要ですか？",
+        "HelpButton.URL": "https://catsblenderplugin.xyz/wiki.html",
+        "HelpButton.success": "Wikiが開かれました",
+        "SupportButton.label": "サポートする",
+        "SupportButton.URL": "https://neoneko.xyz/support-us.html",
+        "SupportButton.success": "サポートページが開かれました",
+        "PatchnotesButton.label": "最新のパッチノート",
+        "PatchnotesButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/releases",
+        "PatchnotesButton.success": "パッチノートが開かれました"
     }
 }
-
