--- a/resources/translations/ko_KR.json
+++ b/resources/translations/ko_KR.json
@@ -175,14 +175,6 @@
         "UpdaterPanel.name": "세팅:",
         "UpdaterPanel.requireRestart1": "재시작이 필요합니다.",
         "UpdaterPanel.requireRestart2": "일부 변경은 블렌더를 다시 시작해야합니다.",
-        "CreditsPanel.desc1": "Cats Blender Plugin (",
-        "CreditsPanel.desc2": "멋진 VRChat 커뮤니티를 위해서",
-        "CreditsPanel.desc3": "Hotox와 GiveMeAllYourCats에 의해 제작됨 <3",
-        "CreditsPanel.desc4": "다음 분들께 특별한 감사를 전합니다:",
-        "CreditsPanel.descContributors": "Feilen, Jordo, Ruubick, 989onan, triazo, Mysteryem",
-        "CreditsPanel.descContributors2": "Shotariya와 Neitri",
-        "CreditsPanel.desc5": "비공식 유지관리자 - Yusarina and 989onan",
-        "CreditsPanel.desc6": "도움이 필요하시거나 혹시 버그를 찾으셨나요?",
         "FixArmature.label": "MMD 모델 수정",
         "FixArmature.desc": "경고: 귀하가 아닌 이상 이것을 사용하지 마십시오\n새로운 MMD 모델 가져오기, 사용하지 마세요\n이미 설정된 모델에 대한 내용입니다.\n유니티와 VRCHAT!\n\n자동으로:\n- 부모 뼈\n- 불필요한 뼈, 개체, 그룹 및 제약 조건을 제거합니다.\n- 뼈와 물체를 번역하고 이름을 바꿉니다.\n- 웨이트 페인트 병합\n- 엉덩이를 바로잡는다\n- 모프를 모양으로 변환합니다.",
         "FixArmature.warning.line1": "주의: 이 기능은 Unity용으로 설정되지 않은 모델 전용입니다.",
@@ -269,10 +261,8 @@
         "ShotariyaButton.label": "매테리얼 통합기 다운로드",
         "BoneMergeButton.label": "뼈 통합",
         "ForumButton.label": "포럼으로 가기",
-        "HelpButton.label": "우리 위키를 참조하세요",
         "LegacyReadButton.label": "레거시 기능 위키",
         "MMDOptionswiki.label": "레거시 기능 위키",
-        "PatchnotesButton.label": "최신 패치노트",
         "ScanButton.label": "버텍스 줄일 모델 검색",
         "AutoDecimateCatsButton.label": "버텍스 줄이기(Decimation)",
         "AutoDecimateCatsButton.error.noMesh": "메쉬가 발견되지 않음!",
@@ -491,7 +481,6 @@
         "IgnoreThisVersionButton.success": "버전 {name}은 무시됩니다.",
         "Scene.root_bone.desc": "뿌리 뼈에 양육할 수있는 것처럼 보이는 뼈 목록",
         "A hard limit will be established in the future that will not be much more than this.\"": "퀘스트 推奨 推奨 の トリス 数 数.\n将来 将来 将来 に 的 、 これ これ を はるか はるか に 超える こと の の ない 厳しい 制限 が 設定 さ れ ます。。。",
-        "CreditsPanel.label": "크레딧",
         "Scene.merge_mesh.desc": "뼈 정점 그룹과의 메쉬",
         "Scene.eye_blink_shape.desc": "눈의 깜박임을 테스트하십시오",
         "MergeWeightsToActive.success": "{number} 뼈를 삭제하고 무게를 활성 뼈에 추가했습니다.",
@@ -554,7 +543,6 @@
         "AttachMesh.desc": "선택된 메쉬를 선택된 전기자의 선택된 뼈에 부착합니다.\n\n정보 : 메쉬는 선택된 뼈에만 할당됩니다.\n예 : 재킷은 작동하지 않습니다. 여러 뼈가 필요하기 때문입니다.",
         "ErrorDisplay.materials2": "이 모델에는 {번호} 재료가 있습니다!",
         "Scene.mouth_o.desc": "누군가가 \"오\"라고 말하는 것처럼 보이는 입 운동을 포함하는 형상 키.\n여기에 \"기본\"과 같은 빈 모양 키를 넣지 마십시오.",
-        "HelpButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/wiki",
         "Scene.eye_rotation_x.desc": "세로 축에서 눈 뼈를 회전시킵니다",
         "select_this_to_only_merge_the_weights_of_the_visible_meshes": "보이는 메쉬의 무게 만 병합하려면 이것을 선택하십시오.",
         "ImportFBX.desc": "FBX 모델 가져 오기 (.FBX)",
@@ -567,7 +555,6 @@
         "Scene.merge_armature_into.desc": "다른 전기자가 병합 될 전기자를 선택하십시오.",
         "AtlasHelpButton.success": "아틀라스도 도움이 열렸습니다.",
         "SourceToolsButton.URL": "https://github.com/Artfunkel/BlenderSourceTools",
-        "PatchnotesButton.success": "패치 노트가 열렸습니다.",
         "Scene.show_mmd_tabs.desc": "MMD_TOOLS \"MMD\"및 \"MISC\"를 숨기거나 표시 할 수 있습니다.",
         "ErrorDisplay.materials4": "고양이에 텍스처 아틀라스를 만드는 것은 매우 쉽습니다.",
         "ShapeKeyApplier.successRemoved": "기본에서 ShapeKey \"{name}\"을 성공적으로 제거했습니다.",
@@ -592,7 +579,6 @@
         "ApplyAllTransformations.desc": "모든 객체의 위치, 회전 및 스케일을 적용합니다.",
         "Scene.mouth_ch.desc": "누군가가 \"ch\"라고 말하는 것처럼 보이는 입 운동을 포함하는 형상 키.입술을 열고 치아를 쥐었다.\n여기에 \"기본\"과 같은 빈 모양 키를 넣지 마십시오.",
         "UpdateNotificationPopup.desc": "이것은 업데이트를 사용할 수 있음을 보여줍니다",
-        "PatchnotesButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/releases",
         "Scene.mesh_name_viseme.desc": "입 모양 키와의 메쉬",
         "InstallXPS.label": "XPS 도구가 설치되거나 활성화되지 않았습니다!",
         "UpdateToLatestButton.desc": "고양이를 최신 버전으로 업데이트하십시오",
@@ -666,7 +652,6 @@
         "FlipNormals.success": "모든 정상을 뒤집습니다.",
         "RootButton.success": "뼈가 양육되었습니다!",
         "FixVRMShapesButton.desc": "Koikatsu 모델의 모양 키를 수정합니다",
-        "HelpButton.success": "Github Wiki가 열렸습니다.",
         "check_for_update.cantCheck": "업데이트를 확인할 수없고 나중에 다시 시도하십시오",
         "ErrorDisplay.materials1": "모델이 최적화되지 않았습니다!",
         "UpdateCompletePanel.success1": "고양이가 성공적으로 업데이트되었습니다.",
@@ -799,6 +784,23 @@
         "Scene.generate_twistbones_upper.desc": "상체 트위스트 본 생성 (척추, 목)",
         "RemoveDoubles.warning.shapekeys": "이 메시에는 영향을 받을 수 있는 쉐이프 키가 있습니다",
         "RemoveDoubles.warning.shapekeys.impact": "더블 제거는 쉐이프 키 변형에 영향을 줄 수 있습니다",
-        "RemoveDoubles.warning.shapekeys.continue": "계속하시겠습니까?"
+        "RemoveDoubles.warning.shapekeys.continue": "계속하시겠습니까?",
+        "CreditsPanel.label": "크레딧",
+        "CreditsPanel.desc1": "Cats 블렌더 플러그인 (",
+        "CreditsPanel.desc4": "특별한 감사:",
+        "CreditsPanel.descContributors": "Feilen, Jordo, Ruubick, triazo, Mysteryem",
+        "CreditsPanel.descContributors2": "Shotariya 와 Neitri",
+        "CreditsPanel.maintainers1": "Neoneko 팀이 유지보수 중입니다",
+        "CreditsPanel.maintainers2": "메인테이너: Yusarina 와 989onan",
+        "CreditsPanel.originalCreators": "Hotox 와 GiveMeAllYourCats 가 제작",
+        "HelpButton.label": "도움이 필요하신가요?",
+        "HelpButton.URL": "https://catsblenderplugin.xyz/wiki.html",
+        "HelpButton.success": "위키가 열렸습니다",
+        "SupportButton.label": "후원하기",
+        "SupportButton.URL": "https://neoneko.xyz/support-us.html",
+        "SupportButton.success": "후원 페이지가 열렸습니다",
+        "PatchnotesButton.label": "최신 패치노트",
+        "PatchnotesButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/releases",
+        "PatchnotesButton.success": "패치노트가 열렸습니다"
     }
 }
