--- a/resources/translations/en_US.json
+++ b/resources/translations/en_US.json
@@ -166,15 +166,6 @@
         "UpdaterPanel.name": "Settings:",
         "UpdaterPanel.requireRestart1": "Restart required.",
         "UpdaterPanel.requireRestart2": "Some changes require a Blender restart.",
-        "CreditsPanel.label": "Credits",
-        "CreditsPanel.desc1": "Cats Blender Plugin (",
-        "CreditsPanel.desc2": "Created by Hotox and GiveMeAllYourCats",
-        "CreditsPanel.desc3": "For the awesome VRChat community <3",
-        "CreditsPanel.desc4": "Special thanks to:",
-        "CreditsPanel.descContributors": "Feilen, Jordo, Ruubick, 989onan, triazo, Mysteryem",
-        "CreditsPanel.descContributors2": "Shotariya and Neitri",
-        "CreditsPanel.desc5": "Unoffical Maintainer - Yusarina and 989onan",
-        "CreditsPanel.desc6": "Do you need help or found a bug?",
         "FixArmature.label": "Fix MMD Model",
         "FixArmature.desc": "WARNING: DO NOT USE THIS UNLESS YOU ARE\nIMPORTING A NEW MMD MODEL, DO NOT USE \nTHIS FOR MODELS ALREADY SET UP FOR \nUNITY AND VRCHAT!\n\nAutomatically:\n- Reparents bones\n- Removes unnecessary bones, objects, groups & constraints\n- Translates and renames bones & objects\n- Merges weight paints\n- Corrects the hips\n- Converts morphs into shapes",
         "FixArmature.warning.line1": "Please note: This function is only for models not set up for Unity,",
@@ -323,18 +314,9 @@
         "ForumButton.label": "Go to the Forums",
         "ForumButton.URL": "https://vrcat.club/threads/cats-blender-plugin.6/",
         "ForumButton.success": "Forum opened.",
-        "HelpButton.label": "Need Help?",
-        "HelpButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/wiki",
-        "HelpButton.success": "Github wiki opened.",
-        "LegacyReadButton.label": "Legacy features wiki",
-        "LegacyReadButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/wiki/Legacy-Features",
-        "LegacyReadButton.success": "Github wiki opened.",
         "MMDOptionswiki.label": "MMD Options Wiki",
         "MMDOptionswiki.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/wiki/Features#mmd-options",
         "MMDOptionswiki.success": "Github wiki opened.",
-        "PatchnotesButton.label": "Latest Patchnotes",
-        "PatchnotesButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/releases",
-        "PatchnotesButton.success": "Patchnotes opened.",
         "ScanButton.label": "Scan for decimation models",
         "ScanButton.desc": "Separates the mesh.",
         "AddShapeButton.label": "Add",
@@ -799,6 +781,23 @@
         "Scene.generate_twistbones_upper.desc": "Generate twist bones for the upper body (spine, neck)",
         "RemoveDoubles.warning.shapekeys": "This mesh has shape keys that could be affected",
         "RemoveDoubles.warning.shapekeys.impact": "Removing doubles may impact shape key deformations",
-        "RemoveDoubles.warning.shapekeys.continue": "Do you want to continue?" 
+        "RemoveDoubles.warning.shapekeys.continue": "Do you want to continue?",
+        "CreditsPanel.label": "Credits",
+        "CreditsPanel.desc1": "Cats Blender Plugin (",
+        "CreditsPanel.desc4": "Special thanks to:",
+        "CreditsPanel.descContributors": "Feilen, Jordo, Ruubick, triazo, Mysteryem",
+        "CreditsPanel.descContributors2": "Shotariya and Neitri",
+        "CreditsPanel.maintainers1": "Happily Maintained by the Neoneko Team",
+        "CreditsPanel.maintainers2": "Maintainers: Yusarina and 989onan",
+        "CreditsPanel.originalCreators": "Original created by Hotox and GiveMeAllYourCats",
+        "HelpButton.label": "Need Help?",
+        "HelpButton.URL": "https://catsblenderplugin.xyz/wiki.html",
+        "HelpButton.success": "Wiki opened",
+        "SupportButton.label": "Support Us",
+        "SupportButton.URL": "https://neoneko.xyz/support-us.html", 
+        "SupportButton.success": "Support page opened",
+        "PatchnotesButton.label": "Latest Patchnotes",
+        "PatchnotesButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/releases",
+        "PatchnotesButton.success": "Patchnotes opened" 
     }
 }
