--- a/resources/translations/ja_JP.json
+++ b/resources/translations/ja_JP.json
@@ -2,18 +2,25 @@
     "localeCode": "ja_JP",
     "authors": [],
     "messages":{
-        "ToolPanel.label": "Cats ブレンダープラグイン",
-        "ToolPanel.category": "猫",
-        "QuickAccess.label": "迅速なアクセス",
-        "QuickAccess.warn.newBlender1": "サポートされていない可能性のあるBlenderバージョンが検出されました！",
+        "Main.error.restartAdmin": "\n\nCATS のインストールに問題が見つかりました！\n修正するには管理者として Blender を再起動してください！\n",
+        "Main.error.deleteFollowing": "\n\nCATS のインストールに問題が見つかりました！\n修正するにはアドオンフォルダ内の以下のファイルとフォルダを削除してください：\n",
+        "Main.error.installViaPreferences": "\n\nCATS のインストールに問題が見つかりました！\nユーザー設定から CATS をインストールして Blender を再起動してください！\n",
+        "Main.error.restartAndEnable": "\n\nCATS のインストールの問題が修正されました！\nBlender を再起動して CATS を有効にしてください！\n",
+        "Main.error.29unsupportedVersion": "\n\nBlender 3.6 より古いバージョンは CATS でサポートされていません。\nBlender 3.6 以降をご使用ください。\n",
+        "Main.error.40unsupportedVersion": "\n\nこのバージョンの Blender はこのバージョンの CATS ではサポートされていません。\nBlender 4.3 をご使用ください。4.3 バージョンは GitHub からダウンロードできます。\n",
+        "Main.error.restartAndEnable_alt": "\n\nBlender を再起動して CATS を有効にしてください！\n",
+        "ToolPanel.label": "Cats Blender プラグイン",
+        "ToolPanel.category": "CATS",
+        "QuickAccess.label": "クイックアクセス",
+        "QuickAccess.warn.newBlender1": "サポートされていない可能性のある Blender バージョンが検出されました！",
         "QuickAccess.warn.newBlender2": "一部の機能が動作しない可能性があります",
-        "QuickAccess.warn.newBlender3": "Blender 4.3までサポートしています。4.2バージョンはGitHubをご覧ください。",
-        "QuickAccess.warn.Alpha1": "이 Blender 및 Cats 버전은 초기 알파 버전입니다.",
-        "QuickAccess.warn.Alpha2": "문제가 발생할 경우 알려주시기 바랍니다.",
-        "QuickAccess.warn.Alpha3": "Blender의 안정적인 버전으로 다운그레이드하세요.",
-        "QuickAccess.warn.oldBlender1": "古いブレンダーバージョンが検出されました!",
-        "QuickAccess.warn.oldBlender2": "一部の機能は動作しない可能性があります!",
-        "QuickAccess.warn.oldBlender3": "ブレンダー4.2以上にアップデートしてください!",
+        "QuickAccess.warn.newBlender3": "Blender 4.4 までサポートしています。正しいバージョンは公式サイトでご確認ください。",
+        "QuickAccess.warn.Alpha1": "この Blender と CATS のバージョンは早期アルファ版です",
+        "QuickAccess.warn.Alpha2": "問題が発生する可能性があります",
+        "QuickAccess.warn.Alpha3": "安定版の Blender にダウングレードしてください。",
+        "QuickAccess.warn.oldBlender1": "古いバージョンの Blender が検出されました！",
+        "QuickAccess.warn.oldBlender2": "一部の機能が動作しない可能性があります！",
+        "QuickAccess.warn.oldBlender3": "Blender 4.3 にアップデートしてください！",
         "QuickAccess.warn.noDict1": "辞書が見つかりません!",
         "QuickAccess.warn.noDict2": "翻訳は機能しますが、最適化されません。",
         "QuickAccess.warn.noDict3": "これを修正するためにCatsを再インストールします。",
