--- a/resources/translations/ko_KR.json
+++ b/resources/translations/ko_KR.json
@@ -2,23 +2,25 @@
     "localeCode": "ko_KR",
     "authors": [],
     "messages":{
-        "Main.error.restartAdmin": "\n\n잘못 설치된 Cats Plugin이 발견되었습니다!\n이 문제를 해결하려면 Blender를 관리자로 다시 시작하세요!\n",
-        "Main.error.deleteFollowing": "\n\n잘못 설치된 Cats Plugin이 발견되었습니다!\n이 문제를 해결하려면 addons 폴더에서 다음 파일과 폴더를 삭제하세요.:\n",
-        "Main.error.installViaPreferences": "\n\n잘못 설치된 Cats Plugin이 발견되었습니다!\n사용자 환경 설정(User Preferences)을 통해 CATS를 설치하고 블렌더를 다시 시작하세요!\n",
-        "Main.error.restartAndEnable": "\n\n잘못된 설치된 Cats Plugin 발견됐고 수정되었습니다!\nBlender를 다시 시작하고 Cats Plugin를 다시 활성화하세요!\n",
-        "Main.error.29unsupportedVersion": "\n\n3.6 이전의 블렌더 버전은 Cats에서 지원하지 않습니다.\nBlender 3.6 버전 이상을 사용하세요.\n",
-        "Main.error.40unsupportedVersion": "\n\n이 버전의 고양이에서는 블렌더 4.0이 지원되지 않습니다..\nBlender 3.6을 사용하세요. 내 github에서 4.0 버전을 다운로드할 수 있습니다.\n",
-        "Main.error.restartAndEnable_alt": "\n\nBlender를 다시 시작하고 Cats Plugin를 다시 활성화하세요!\n",
+        "Main.error.restartAdmin": "\n\nCATS 설치에 문제가 발견되었습니다!\n해결하려면 관리자 권한으로 Blender를 재시작하세요!\n",
+        "Main.error.deleteFollowing": "\n\nCATS 설치에 문제가 발견되었습니다!\n해결하려면 애드온 폴더에서 다음 파일과 폴더를 삭제하세요:\n",
+        "Main.error.installViaPreferences": "\n\nCATS 설치에 문제가 발견되었습니다!\n사용자 설정에서 CATS를 설치하고 Blender를 재시작하세요!\n",
+        "Main.error.restartAndEnable": "\n\nCATS 설치 문제가 해결되었습니다!\nBlender를 재시작하고 CATS를 활성화하세요!\n",
+        "Main.error.29unsupportedVersion": "\n\nBlender 3.6 이전 버전은 CATS에서 지원되지 않습니다.\nBlender 3.6 이상을 사용해주세요.\n",
+        "Main.error.40unsupportedVersion": "\n\n이 Blender 버전은 현재 CATS 버전에서 지원되지 않습니다.\nBlender 4.3을 사용해주세요. 4.3 버전은 GitHub에서 다운로드할 수 있습니다.\n",
+        "Main.error.restartAndEnable_alt": "\n\nBlender를 재시작하고 CATS를 활성화하세요!\n",
+        "ToolPanel.label": "Cats Blender 플러그인",
+        "ToolPanel.category": "CATS",
         "QuickAccess.label": "빠른 접근",
         "QuickAccess.warn.newBlender1": "지원되지 않는 Blender 버전이 감지되었습니다!",
         "QuickAccess.warn.newBlender2": "일부 기능이 작동하지 않을 수 있습니다",
-        "QuickAccess.warn.newBlender3": "Blender 4.3까지 지원됩니다. 4.3 버전은 GitHub에서 확인하세요.",
-        "QuickAccess.warn.Alpha1": "이 Blender 및 Cats 버전은 초기 알파 버전입니다.",
-        "QuickAccess.warn.Alpha2": "문제가 발생할 경우 알려주시기 바랍니다.",
-        "QuickAccess.warn.Alpha3": "Blender의 안정적인 버전으로 다운그레이드하세요.",
-        "QuickAccess.warn.oldBlender1": "이전 블렌더 버전이 발견되었습니다!",
+        "QuickAccess.warn.newBlender3": "Blender 4.4까지 지원됩니다. 올바른 버전은 웹사이트에서 확인하세요.",
+        "QuickAccess.warn.Alpha1": "이 Blender와 CATS 버전은 초기 알파 버전입니다",
+        "QuickAccess.warn.Alpha2": "문제가 발생할 수 있습니다",
+        "QuickAccess.warn.Alpha3": "안정 버전의 Blender로 다운그레이드하세요.",
+        "QuickAccess.warn.oldBlender1": "구 버전 Blender가 감지되었습니다!",
         "QuickAccess.warn.oldBlender2": "일부 기능이 작동하지 않을 수 있습니다!",
-        "QuickAccess.warn.oldBlender3": "블렌더 4.2 버전으로 업데이트하세요!",
+        "QuickAccess.warn.oldBlender3": "Blender 4.3으로 업데이트하세요!",
         "QuickAccess.warn.noDict1": "사전파일(Dictionary)을 찾을 수 없습니다!",
         "QuickAccess.warn.noDict2": "번역은 되지만 최적화되지는 않습니다.",
         "QuickAccess.warn.noDict3": "이 문제를 해결하려면 Cats를 다시 설치하세요.",
@@ -476,7 +478,6 @@
         "ShotariyaButton.success": "재료 콤비너 링크가 열렸습니다",
         "RecalculateNormals.desc": "선택한 메쉬 내부의 정상을 가리 킵니다.\n\n이것을 망칠 수 있으므로 잘 생긴 메쉬에 이것을 사용하지 마십시오.\n메쉬에 무작위로 되돌아 가거나 어두운면이있는 경우 이것을 사용하십시오.",
         "ErrorDisplay.meshes3": "그것은 최적화되지 않았으며 당신과 다른 사람들에게 지연을 일으킬 수 있습니다!",
-        "ToolPanel.label": "고양이 블렌더 플러그인",
         "ShowPatchnotesPanel.releaseDate": "릴리스 : {date}",
         "IgnoreThisVersionButton.success": "버전 {name}은 무시됩니다.",
         "Scene.root_bone.desc": "뿌리 뼈에 양육할 수있는 것처럼 보이는 뼈 목록",
@@ -572,7 +573,6 @@
         "Scene.mouth_a.desc": "누군가가 \"aa\"라고 말하는 것처럼 보이는 입 운동을 포함하는 형상 키.\n여기에 \"기본\"과 같은 빈 모양 키를 넣지 마십시오.",
         "ForumButton.success": "포럼이 열렸습니다.",
         "ApplyTransformations.desc": "위치, 회전 및 스케일을 전기자에 적용하고 메시입니다.",
-        "ToolPanel.category": "고양이",
         "ShapeKeyApplier.successSet": "ShapeKey \"{name}\"을 기본으로 성공적으로 적용했습니다.",
         "draw_updater_panel.updateLabel": "업데이트 :",
         "UpdateNotificationPopup.newUpdate": "고양이 v {name} 사용 가능!",
