--- a/resources/translations/ko_KR.json
+++ b/resources/translations/ko_KR.json
@@ -2,20 +2,25 @@
     "localeCode": "ko_KR",
     "authors": [],
     "messages":{
-        "Main.error.restartAdmin": "\n\n잘못 설치된 Cats Plugin이 발견되었습니다!\n이 문제를 해결하려면 Blender를 관리자로 다시 시작하세요!\n",
-        "Main.error.deleteFollowing": "\n\n잘못 설치된 Cats Plugin이 발견되었습니다!\n이 문제를 해결하려면 addons 폴더에서 다음 파일과 폴더를 삭제하세요.:\n",
-        "Main.error.installViaPreferences": "\n\n잘못 설치된 Cats Plugin이 발견되었습니다!\n사용자 환경 설정(User Preferences)을 통해 CATS를 설치하고 블렌더를 다시 시작하세요!\n",
-        "Main.error.restartAndEnable": "\n\n잘못된 설치된 Cats Plugin 발견됐고 수정되었습니다!\nBlender를 다시 시작하고 Cats Plugin를 다시 활성화하세요!\n",
-        "Main.error.29unsupportedVersion": "\n\n3.6 이전의 블렌더 버전은 Cats에서 지원하지 않습니다.\nBlender 3.6 버전 이상을 사용하세요.\n",
-        "Main.error.40unsupportedVersion": "\n\n이 버전의 고양이에서는 블렌더 4.0이 지원되지 않습니다..\nBlender 3.6을 사용하세요. 내 github에서 4.0 버전을 다운로드할 수 있습니다.\n",
-        "Main.error.restartAndEnable_alt": "\n\nBlender를 다시 시작하고 Cats Plugin를 다시 활성화하세요!\n",
+        "Main.error.restartAdmin": "\n\nCATS 설치에 문제가 발견되었습니다!\n해결하려면 관리자 권한으로 Blender를 재시작하세요!\n",
+        "Main.error.deleteFollowing": "\n\nCATS 설치에 문제가 발견되었습니다!\n해결하려면 애드온 폴더에서 다음 파일과 폴더를 삭제하세요:\n",
+        "Main.error.installViaPreferences": "\n\nCATS 설치에 문제가 발견되었습니다!\n사용자 설정에서 CATS를 설치하고 Blender를 재시작하세요!\n",
+        "Main.error.restartAndEnable": "\n\nCATS 설치 문제가 해결되었습니다!\nBlender를 재시작하고 CATS를 활성화하세요!\n",
+        "Main.error.29unsupportedVersion": "\n\nBlender 3.6 이전 버전은 CATS에서 지원되지 않습니다.\nBlender 3.6 이상을 사용해주세요.\n",
+        "Main.error.40unsupportedVersion": "\n\n이 Blender 버전은 현재 CATS 버전에서 지원되지 않습니다.\nBlender 4.2을 사용해주세요. 4.2 버전은 GitHub에서 다운로드할 수 있습니다.\n",
+        "Main.error.restartAndEnable_alt": "\n\nBlender를 재시작하고 CATS를 활성화하세요!\n",
+        "ToolPanel.label": "Cats Blender 플러그인",
+        "ToolPanel.category": "CATS",
         "QuickAccess.label": "빠른 접근",
         "QuickAccess.warn.newBlender1": "지원되지 않는 Blender 버전이 감지되었습니다!",
         "QuickAccess.warn.newBlender2": "일부 기능이 작동하지 않을 수 있습니다",
-        "QuickAccess.warn.newBlender3": "Blender 4.2까지 지원됩니다. 4.2 버전은 GitHub에서 확인하세요.",
-        "QuickAccess.warn.oldBlender1": "이전 블렌더 버전이 발견되었습니다!",
+        "QuickAccess.warn.newBlender3": "Blender 4.4까지 지원됩니다. 올바른 버전은 웹사이트에서 확인하세요.",
+        "QuickAccess.warn.Alpha1": "이 Blender와 CATS 버전은 초기 알파 버전입니다",
+        "QuickAccess.warn.Alpha2": "문제가 발생할 수 있습니다",
+        "QuickAccess.warn.Alpha3": "안정 버전의 Blender로 다운그레이드하세요.",
+        "QuickAccess.warn.oldBlender1": "구 버전 Blender가 감지되었습니다!",
         "QuickAccess.warn.oldBlender2": "일부 기능이 작동하지 않을 수 있습니다!",
-        "QuickAccess.warn.oldBlender3": "블렌더 4.2 버전으로 업데이트하세요!",
+        "QuickAccess.warn.oldBlender3": "Blender 4.2으로 업데이트하세요!",
         "QuickAccess.warn.noDict1": "사전파일(Dictionary)을 찾을 수 없습니다!",
         "QuickAccess.warn.noDict2": "번역은 되지만 최적화되지는 않습니다.",
         "QuickAccess.warn.noDict3": "이 문제를 해결하려면 Cats를 다시 설치하세요.",
@@ -172,14 +177,6 @@
         "UpdaterPanel.name": "세팅:",
         "UpdaterPanel.requireRestart1": "재시작이 필요합니다.",
         "UpdaterPanel.requireRestart2": "일부 변경은 블렌더를 다시 시작해야합니다.",
-        "CreditsPanel.desc1": "Cats Blender Plugin (",
-        "CreditsPanel.desc2": "멋진 VRChat 커뮤니티를 위해서",
-        "CreditsPanel.desc3": "Hotox와 GiveMeAllYourCats에 의해 제작됨 <3",
-        "CreditsPanel.desc4": "다음 분들께 특별한 감사를 전합니다:",
-        "CreditsPanel.descContributors": "Feilen, Jordo, Ruubick, 989onan, triazo, Mysteryem",
-        "CreditsPanel.descContributors2": "Shotariya와 Neitri",
-        "CreditsPanel.desc5": "비공식 유지관리자 - Yusarina and 989onan",
-        "CreditsPanel.desc6": "도움이 필요하시거나 혹시 버그를 찾으셨나요?",
         "FixArmature.label": "MMD 모델 수정",
         "FixArmature.desc": "경고: 귀하가 아닌 이상 이것을 사용하지 마십시오\n새로운 MMD 모델 가져오기, 사용하지 마세요\n이미 설정된 모델에 대한 내용입니다.\n유니티와 VRCHAT!\n\n자동으로:\n- 부모 뼈\n- 불필요한 뼈, 개체, 그룹 및 제약 조건을 제거합니다.\n- 뼈와 물체를 번역하고 이름을 바꿉니다.\n- 웨이트 페인트 병합\n- 엉덩이를 바로잡는다\n- 모프를 모양으로 변환합니다.",
         "FixArmature.warning.line1": "주의: 이 기능은 Unity용으로 설정되지 않은 모델 전용입니다.",
@@ -266,10 +263,8 @@
         "ShotariyaButton.label": "매테리얼 통합기 다운로드",
         "BoneMergeButton.label": "뼈 통합",
         "ForumButton.label": "포럼으로 가기",
-        "HelpButton.label": "우리 위키를 참조하세요",
         "LegacyReadButton.label": "레거시 기능 위키",
         "MMDOptionswiki.label": "레거시 기능 위키",
-        "PatchnotesButton.label": "최신 패치노트",
         "ScanButton.label": "버텍스 줄일 모델 검색",
         "AutoDecimateCatsButton.label": "버텍스 줄이기(Decimation)",
         "AutoDecimateCatsButton.error.noMesh": "메쉬가 발견되지 않음!",
@@ -483,12 +478,10 @@
         "ShotariyaButton.success": "재료 콤비너 링크가 열렸습니다",
         "RecalculateNormals.desc": "선택한 메쉬 내부의 정상을 가리 킵니다.\n\n이것을 망칠 수 있으므로 잘 생긴 메쉬에 이것을 사용하지 마십시오.\n메쉬에 무작위로 되돌아 가거나 어두운면이있는 경우 이것을 사용하십시오.",
         "ErrorDisplay.meshes3": "그것은 최적화되지 않았으며 당신과 다른 사람들에게 지연을 일으킬 수 있습니다!",
-        "ToolPanel.label": "고양이 블렌더 플러그인",
         "ShowPatchnotesPanel.releaseDate": "릴리스 : {date}",
         "IgnoreThisVersionButton.success": "버전 {name}은 무시됩니다.",
         "Scene.root_bone.desc": "뿌리 뼈에 양육할 수있는 것처럼 보이는 뼈 목록",
         "A hard limit will be established in the future that will not be much more than this.\"": "퀘스트 推奨 推奨 の トリス 数 数.\n将来 将来 将来 に 的 、 これ これ を はるか はるか に 超える こと の の ない 厳しい 制限 が 設定 さ れ ます。。。",
-        "CreditsPanel.label": "크레딧",
         "Scene.merge_mesh.desc": "뼈 정점 그룹과의 메쉬",
         "Scene.eye_blink_shape.desc": "눈의 깜박임을 테스트하십시오",
         "MergeWeightsToActive.success": "{number} 뼈를 삭제하고 무게를 활성 뼈에 추가했습니다.",
@@ -551,7 +544,6 @@
         "AttachMesh.desc": "선택된 메쉬를 선택된 전기자의 선택된 뼈에 부착합니다.\n\n정보 : 메쉬는 선택된 뼈에만 할당됩니다.\n예 : 재킷은 작동하지 않습니다. 여러 뼈가 필요하기 때문입니다.",
         "ErrorDisplay.materials2": "이 모델에는 {번호} 재료가 있습니다!",
         "Scene.mouth_o.desc": "누군가가 \"오\"라고 말하는 것처럼 보이는 입 운동을 포함하는 형상 키.\n여기에 \"기본\"과 같은 빈 모양 키를 넣지 마십시오.",
-        "HelpButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/wiki",
         "Scene.eye_rotation_x.desc": "세로 축에서 눈 뼈를 회전시킵니다",
         "select_this_to_only_merge_the_weights_of_the_visible_meshes": "보이는 메쉬의 무게 만 병합하려면 이것을 선택하십시오.",
         "ImportFBX.desc": "FBX 모델 가져 오기 (.FBX)",
@@ -564,7 +556,6 @@
         "Scene.merge_armature_into.desc": "다른 전기자가 병합 될 전기자를 선택하십시오.",
         "AtlasHelpButton.success": "아틀라스도 도움이 열렸습니다.",
         "SourceToolsButton.URL": "https://github.com/Artfunkel/BlenderSourceTools",
-        "PatchnotesButton.success": "패치 노트가 열렸습니다.",
         "Scene.show_mmd_tabs.desc": "MMD_TOOLS \"MMD\"및 \"MISC\"를 숨기거나 표시 할 수 있습니다.",
         "ErrorDisplay.materials4": "고양이에 텍스처 아틀라스를 만드는 것은 매우 쉽습니다.",
         "ShapeKeyApplier.successRemoved": "기본에서 ShapeKey \"{name}\"을 성공적으로 제거했습니다.",
@@ -582,14 +573,12 @@
         "Scene.mouth_a.desc": "누군가가 \"aa\"라고 말하는 것처럼 보이는 입 운동을 포함하는 형상 키.\n여기에 \"기본\"과 같은 빈 모양 키를 넣지 마십시오.",
         "ForumButton.success": "포럼이 열렸습니다.",
         "ApplyTransformations.desc": "위치, 회전 및 스케일을 전기자에 적용하고 메시입니다.",
-        "ToolPanel.category": "고양이",
         "ShapeKeyApplier.successSet": "ShapeKey \"{name}\"을 기본으로 성공적으로 적용했습니다.",
         "draw_updater_panel.updateLabel": "업데이트 :",
         "UpdateNotificationPopup.newUpdate": "고양이 v {name} 사용 가능!",
         "ApplyAllTransformations.desc": "모든 객체의 위치, 회전 및 스케일을 적용합니다.",
         "Scene.mouth_ch.desc": "누군가가 \"ch\"라고 말하는 것처럼 보이는 입 운동을 포함하는 형상 키.입술을 열고 치아를 쥐었다.\n여기에 \"기본\"과 같은 빈 모양 키를 넣지 마십시오.",
         "UpdateNotificationPopup.desc": "이것은 업데이트를 사용할 수 있음을 보여줍니다",
-        "PatchnotesButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/releases",
         "Scene.mesh_name_viseme.desc": "입 모양 키와의 메쉬",
         "InstallXPS.label": "XPS 도구가 설치되거나 활성화되지 않았습니다!",
         "UpdateToLatestButton.desc": "고양이를 최신 버전으로 업데이트하십시오",
@@ -663,7 +652,6 @@
         "FlipNormals.success": "모든 정상을 뒤집습니다.",
         "RootButton.success": "뼈가 양육되었습니다!",
         "FixVRMShapesButton.desc": "Koikatsu 모델의 모양 키를 수정합니다",
-        "HelpButton.success": "Github Wiki가 열렸습니다.",
         "check_for_update.cantCheck": "업데이트를 확인할 수없고 나중에 다시 시도하십시오",
         "ErrorDisplay.materials1": "모델이 최적화되지 않았습니다!",
         "UpdateCompletePanel.success1": "고양이가 성공적으로 업데이트되었습니다.",
@@ -796,6 +784,23 @@
         "Scene.generate_twistbones_upper.desc": "상체 트위스트 본 생성 (척추, 목)",
         "RemoveDoubles.warning.shapekeys": "이 메시에는 영향을 받을 수 있는 쉐이프 키가 있습니다",
         "RemoveDoubles.warning.shapekeys.impact": "더블 제거는 쉐이프 키 변형에 영향을 줄 수 있습니다",
-        "RemoveDoubles.warning.shapekeys.continue": "계속하시겠습니까?"
+        "RemoveDoubles.warning.shapekeys.continue": "계속하시겠습니까?",
+        "CreditsPanel.label": "크레딧",
+        "CreditsPanel.desc1": "Cats 블렌더 플러그인 (",
+        "CreditsPanel.desc4": "특별한 감사:",
+        "CreditsPanel.descContributors": "Feilen, Jordo, Ruubick, triazo, Mysteryem",
+        "CreditsPanel.descContributors2": "Shotariya 와 Neitri",
+        "CreditsPanel.maintainers1": "Neoneko 팀이 유지보수 중입니다",
+        "CreditsPanel.maintainers2": "메인테이너: Yusarina 와 989onan",
+        "CreditsPanel.originalCreators": "Hotox 와 GiveMeAllYourCats 가 제작",
+        "HelpButton.label": "도움이 필요하신가요?",
+        "HelpButton.URL": "https://catsblenderplugin.xyz/wiki.html",
+        "HelpButton.success": "위키가 열렸습니다",
+        "SupportButton.label": "후원하기",
+        "SupportButton.URL": "https://neoneko.xyz/support-us.html",
+        "SupportButton.success": "후원 페이지가 열렸습니다",
+        "PatchnotesButton.label": "최신 패치노트",
+        "PatchnotesButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/releases",
+        "PatchnotesButton.success": "패치노트가 열렸습니다"
     }
 }
