Non Uniform Merge Warning

--- a/resources/translations/en_US.json
+++ b/resources/translations/en_US.json
@@ -803,6 +803,7 @@
         "EyeTrackingPanel.troubleshooting.vertexGroups": "• Verify mesh has eye vertex groups",
         "EyeTrackingPanel.troubleshooting.shapeKeys": "• Check shape keys are named correctly", 
         "EyeTrackingPanel.troubleshooting.boneWeights": "• Ensure eye bones are properly weighted",
-        "EyeTrackingPanel.troubleshooting.restPosition": "• Confirm armature is in rest position"
+        "EyeTrackingPanel.troubleshooting.restPosition": "• Confirm armature is in rest position",
+        "merge_armatures.error.mustapplytransforms": "Your armature has different scale values for X, Y, and Z axes, rather\nthan having uniform scaling (where all axes have the same scale value)\n\nThis is important to fix before merging armatures to ensure proper bone\ntransformations and avoid potential deformation issues.\n\nIf you want to continue with this merge even with this warning please\nmake sure apply transforms is checked before you start merging."
     }
 }
