--- a/resources/translations/ja_JP.json
+++ b/resources/translations/ja_JP.json
@@ -804,6 +804,7 @@
         "EyeTrackingPanel.troubleshooting.vertexGroups": "• メッシュに目の頂点グループがあることを確認",
         "EyeTrackingPanel.troubleshooting.shapeKeys": "• シェイプキーの名前が正しく付けられていることを確認",
         "EyeTrackingPanel.troubleshooting.boneWeights": "• 目のボーンが適切にウェイト付けされていることを確認",
-        "EyeTrackingPanel.troubleshooting.restPosition": "• アーマチュアが静止位置にあることを確認"
+        "EyeTrackingPanel.troubleshooting.restPosition": "• アーマチュアが静止位置にあることを確認",
+        "merge_armatures.error.mustapplytransforms": "アーマチュアのX、Y、Z軸のスケール値が異なっており、\n統一されたスケーリング（すべての軸が同じスケール値）になっていません。\n\nアーマチュアをマージする前にこれを修正することは、\n適切なボーンの変換と変形の問題を防ぐために重要です。\n\nこの警告があってもマージを続行したい場合は、\nマージを開始する前に「トランスフォームを適用」にチェックを入れてください。"
     }
 }
